--- a/index.html
+++ b/index.html
@@ -38,28 +38,28 @@
             <div class="swiper-slide container">
                 <div class="home-text">
                     <!-- <span>we are delicacy</span> -->
-                    <h1> <!--choose delicacy --> <br> best healthy <br> chicken salad</h1>
+                    <h1> <!--choose delicacy --> <br> Best Healthy <br> Butter Paneer <br> Recipe</h1>
                     <a href="#" class="btn">Shop Now<i class='bx bx-right-arrow-alt'></i></a>
                 </div>
-                <img src="img2.jpg" alt="">
+                <img src="paneeer.png" alt="">
             </div>
 
             <div class="swiper-slide container">
                 <div class="home-text">
                     <!-- <span>we are delicacy</span> -->
-                    <h1><!--choose delicacy -->  <br> best healthy <br> chicken salad</h1>
+                    <h1><!--choose delicacy -->  <br> Best Healthy <br> Chicken Curry <br> Recipe</h1>
                     <a href="#" class="btn">Shop Now<i class='bx bx-right-arrow-alt'></i></a>
                 </div>
-                <img src="img3.jpg" alt="">
+                <img src="chicken.png" alt="">
             </div>
 
             <div class="swiper-slide container">
                 <div class="home-text">
                     <!-- <span>we are delicacy</span> -->
-                    <h1><!--choose delicacy -->  <br> best healthy <br> chicken salad</h1>
+                    <h1><!--choose delicacy -->  <br> Best Healthy <br> Jeera Rice <br> Recipe</h1>
                     <a href="#" class="btn">Shop Now<i class='bx bx-right-arrow-alt'></i></a>
                 </div>
-                <img src="img4.jpg" alt="">
+                <img src="ricee.png" alt="">
             </div>
            
         </div>
